assets/css/custom.css
html {
  height: 100%;
  margin: 0;
  padding: 0;
}

body {
  height: 100%;
  margin: 0;
  padding: 0;
}

a {
  color: #8411DA;
}

.package-style {
  font-family: 'Courier New', monospace;
  background-color: #F5F5F5;
  font-weight: bold;
}

.author-row {
  max-height:400px;
  overflow:hidden;
}

.bg {
  /* The image used */
  background-image: url("/assets/images/Traceplot.jpg");

  /* Center and scale the image nicely */
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}

.home-btn {
 color: white;
 background-color: rgb(255, 255, 255, 0.1);
 transition-duration: 0.4s; 
 border: 5px solid rgb(255, 255, 255, 0.05);
 padding: 32px 16px;
 font-size: 24px;
 width:50%;
 margin:auto;
 display:block !important;
}

.home-btn:hover {
 color: white;
 background-color: transparent;
 border: 5px solid #FFFFFF;
}

.home-btn-purple {
 color: white;
 background-color: rgb(192, 192, 192, 0.3);
 transition-duration: 0.4s; 
 border: 5px solid rgb(192, 192, 192, 0.05);
 padding: 32px 16px;
 font-size: 24px;
 width:50%;
 margin:auto;
 display:block !important;
}

.home-btn-purple:hover {
 color: white;
 background-color: transparent;
 border: 5px solid #8411DA;
}

.home-btn-pink {
 color: white;
 background-color: rgb(192, 192, 192, 0.3);
 transition-duration: 0.4s; 
 border: 5px solid rgb(192, 192, 192, 0.05);
 padding: 32px 16px;
 font-size: 24px;
 width:50%;
 margin:auto;
 display:block !important;
}

.home-btn-pink:hover {
 color: white;
 background-color: transparent;
 border: 5px solid #F60073;
}

.home-btn-orange {
 color: white;
 background-color: rgb(192, 192, 192, 0.3);
 transition-duration: 0.4s; 
 border: 5px solid rgb(192, 192, 192, 0.05);
 padding: 32px 16px;
 font-size: 24px;
 width:50%;
 margin:auto;
 display:block !important;
}

.home-btn-orange:hover {
 color: white;
 background-color: transparent;
 border: 5px solid #FC9400;
}

